--- a/welcome.html
+++ b/welcome.html
@@ -12,7 +12,9 @@
     <div>
         <h1>Welcome</h1>
         <p>You are now signed in.</p>
-        <p><a href="./signin.html">Sign Out</a></p>
+        <p>
+            <a href="./signin.html">Sign Out</a>
+        </p>
     </div>
 </body>
 
