--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Sign Up</h1>
     <p>Please fill in this form to create an account!</p>
-    <div>
+    <>
         <form>
             <label for="signup-name">Name:</label>
             <input type="text" id="signup-name" required>
@@ -25,12 +25,17 @@
             <label for="signup-confirm-pass">Confirm Password:</label>
             <input type="password" id="signup-confirm-pass" required>
             <br>
+            <span><label class="form-check-label" for="invalidCheck2">
+                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                    Agree to terms and conditions
+                </label>
+            </span>
+            <br>
             <button type="button" onclick="signup()">Sign Up</button>
         </form>
-    </div>
-    <p>Already have an account? <a href="./signin.html">Sign In</a></p>
-    
-    <script src="app.js"></script>
+        </div>
+        <p>Already have an account? <a href="./signin.html">Sign In</a></p>
+        <script src="app.js"></script>
 </body>
 
 </html>
