--- a/welcome.html
+++ b/welcome.html
@@ -13,7 +13,7 @@
         <h1>Welcome</h1>
         <p>You are now signed in.</p>
         <p>
-            <a href="./signin.html">Sign Out</a>
+            <a href="./signin.html">Log Out</a>
         </p>
     </div>
 </body>
