--- a/signin.html
+++ b/signin.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In</title>
+    <title>Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Sign In</h1>
-    <div>
+    <div class="container">
         <form>
-            <label for="signin-email">Email:</label>
-            <input type="email" id="signin-email" required>
-            <br>
-            <label for="signin-pass">Password:</label>
-            <input type="password" id="signin-pass" required>
-            <br>
-            <button type="button" onclick="signin()">Sign In</button>
+            <h2>Login</h2>
+            <div class="input-field">
+                <input type="email" id="signin-email" required>
+                <label for="signin-email">Email</label>
+            </div>
+
+            <div class="input-field">
+                <input type="password" id="signin-pass" required>
+                <label for="signin-pass">Password</label>
+            </div>
+
+            <div class="forget">
+                <label for="remember"><input type="checkbox" id="remember">
+                    <p>Remember me</p>
+                </label>
+                <a href="#">Forgot-Password?</a>
+            </div>
+
+            <button type="button" onclick="signin()">Log In</button>
+            <div class="register">
+                <p>Don't have an account? <a href="./index.html">Register</a></p>
+            </div>
         </form>
     </div>
-    <p>Don't have an account? <a href="./index.html">Sign Up</a></p>
+
     <script src="app.js"></script>
 </body>
 
