--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
             </div>
 
             <div class="input-field">
-                <input type="email" id="signup-email" required>
+                <input type="email" id="signup-email">
                 <label for="signup-email">Email</label>
             </div>
 
             <div class="input-field">
-                <input type="password" id="signup-pass" required>
+                <input type="password" id="signup-pass">
                 <label for="signup-pass">Password</label>
             </div>
 
             <div class="input-field">
-                <input type="password" id="signup-confirm-pass" required>
+                <input type="password" id="signup-confirm-pass">
                 <label for="signup-confirm-pass">Confirm Password</label>
             </div>
 
             <div class="forget">
-                <label for="agree"><input type="checkbox" id="agree" required>
+                <label for="agree"><input type="checkbox" id="agree">
                     <p>Agree to terms and conditions</p>
                 </label>
             </div>
@@ -45,6 +45,7 @@
     </div>
 
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
