--- a/signin.html
+++ b/signin.html
@@ -13,12 +13,12 @@
         <form>
             <h2>Login</h2>
             <div class="input-field">
-                <input type="email" id="signin-email" required>
+                <input type="email" id="signin-email">
                 <label for="signin-email">Email</label>
             </div>
 
             <div class="input-field">
-                <input type="password" id="signin-pass" required>
+                <input type="password" id="signin-pass">
                 <label for="signin-pass">Password</label>
             </div>
 
@@ -37,6 +37,7 @@
     </div>
 
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
