--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             </div>
 
             <div class="input-field">
-                <input type="email" id="signup-email">
+                <input type="email" id="signup-email" required>
                 <label for="signup-email">Email</label>
             </div>
 
             <div class="input-field">
-                <input type="password" id="signup-pass">
+                <input type="password" id="signup-pass" required>
                 <label for="signup-pass">Password</label>
             </div>
 
             <div class="input-field">
-                <input type="password" id="signup-confirm-pass">
+                <input type="password" id="signup-confirm-pass" required>
                 <label for="signup-confirm-pass">Confirm Password</label>
             </div>
 
