--- a/signin.html
+++ b/signin.html
@@ -13,12 +13,12 @@
         <form>
             <h2>Login</h2>
             <div class="input-field">
-                <input type="email" id="signin-email">
+                <input type="email" id="signin-email" required>
                 <label for="signin-email">Email</label>
             </div>
 
             <div class="input-field">
-                <input type="password" id="signin-pass">
+                <input type="password" id="signin-pass" required>
                 <label for="signin-pass">Password</label>
             </div>
 
